--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <section>
             <div>
                 <h2> Meus Filmes Favoritos </h2>
-                <p>Os filmes que mais gosto de assistir!</p>
+                <p>Os filmes que mais amo assistir!</p>
 
                 <ul class="movie-list">
                 
